--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -62,8 +62,7 @@ function mostrarHistorialDePrestamos(){
 
 function updateMostrarHistorialDePrestamos(responseText){
 	$('#historialPrestamos').html(responseText);
-	zebra('tablaHistorialPrestamos');
-	$.scrollTo('#historialPrestamos');
+	scrollTo('#historialPrestamos');
 }
 
 function mostrarHistorialDeReservas(){
