--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -34,8 +34,10 @@
                               <a class="click" onClick="buscarPorAutor('[% prestamo.nivel3.nivel1.getAutor %]')" title="[% 'Filtrar por Autor' | i18n %]">[% prestamo.nivel3.nivel1.getAutor %]</a>
                           </td>
                           <td>
-                              [% IF prestamo.nivel3.nivel2.getEdicion %][% prestamo.nivel3.nivel2.getEdicion %][% END %]
-                              [% IF prestamo.nivel3.nivel2.getAnio_publicacion %]([% prestamo.nivel3.nivel2.getAnio_publicacion %])[% END %]
+                              <span class="label">
+                                [% IF prestamo.nivel3.nivel2.getEdicion %][% prestamo.nivel3.nivel2.getEdicion %][% END %]
+                                [% IF prestamo.nivel3.nivel2.getAnio_publicacion %]([% prestamo.nivel3.nivel2.getAnio_publicacion %])[% END %]
+                              </span>
                           </td>
                           <td>
                               [% PERL %]
@@ -47,11 +49,11 @@
                               [% END %]	
                           </td>
                           <td>
-                              [% prestamo.getFecha_prestamo_formateada %]
+                              <span class="fecha">[% prestamo.getFecha_prestamo_formateada %]</span>
                           </td>
                           <td>
                               [% IF prestamo.fecha_ultima_renovacion %]
-                                  [% prestamo.getFecha_devolucion_formateada %]
+                                  <span class="fecha">[% prestamo.getFecha_devolucion_formateada %]</span>
                               [% ELSE %]
                                   --------
                               [% END %]
@@ -64,14 +66,14 @@
                           </td>
                           <td>
                               [% IF estaVencido %]
-                                  <span class="fecha_critica">[% prestamo.getFecha_vencimiento_formateada %]</span>
+                                  <span class="fecha">[% prestamo.getFecha_vencimiento_formateada %]</span>
                               [% ELSE %]
-                                  <span class="fecha_cumple">[% prestamo.getFecha_vencimiento_formateada %]</span>
+                                  <span class="fecha">[% prestamo.getFecha_vencimiento_formateada %]</span>
                               [% END %]
                           </td>
                           <td>
                               [% IF prestamo.fecha_devolucion%]
-                                [% prestamo.getFecha_devolucion_formateada %]
+                                <span class="fecha">[% prestamo.getFecha_devolucion_formateada %]</span>
                               [% ELSE %]
                                   --------
                               [% END %]
