--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -62,7 +62,7 @@ function mostrarHistorialDePrestamos(){
 
 function updateMostrarHistorialDePrestamos(responseText){
 	$('#historialPrestamos').html(responseText);
-	scrollTo('#historialPrestamos');
+	scrollTo('historialPrestamos');
 }
 
 function mostrarHistorialDeReservas(){
@@ -78,7 +78,7 @@ function mostrarHistorialDeReservas(){
 
 function updateMostrarHistorialDeReservas(responseText){
     $('#historialReservas').html(responseText);
-    $.scrollTo('#historialReseravs');
+    scrollTo('historialReseravs');
 }
 
 //*******************************Fin Para manejar el historial de prestamos************************************
@@ -98,7 +98,7 @@ function mostrarHistorialDeSanciones(){
 
 function updateMostrarHistorialDeSanciones(responseText){
     $('#historialSanciones').html(responseText);
-    $.scrollTo('#historialSanciones');
+    scrollTo('historialSanciones');
 }
 
 
