--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -850,6 +850,7 @@ a.label:hover,a.badge:hover{color:#ffffff;text-decoration:none;cursor:pointer;}
 .subnav-fixed{border-color:#D5D5D5;border-radius:0 0 0 0;border-width:0 0 1px;box-shadow:0 1px 0 #ffffff inset,0 1px 5px rgba(0, 0, 0, 0.1);left:0;position:fixed;right:0;top:40px;z-index:1020;}
 #recaptcha_widget_div{margin-left:78px;}
 #section_login{width:50%;margin:auto;}
+#historico_prestamos_usuario{min-width:900px !important;}
 #logo a{background:url("images/logo_horizontal.png") no-repeat scroll -10px 5px transparent;color:#FFFFFF;}
 #logo{float:left;}
 #logo a{display:block;height:40px;margin-right:5px;outline:medium none;text-indent:-9999px;width:140px;}
