--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
@@ -99,7 +99,7 @@ function updateBorrarSancion(responseText){
 	</fieldset>
 [% ELSE %]
     <br />
-    <div class="alert alert-success">[% 'El usuario no tiene sanciones actualmente' | i18n %]</div>
+    <div class="alert alert-success"><i class="icon-ok"></i> [% 'El usuario no tiene sanciones actualmente' | i18n %]</div>
 
 [% END %]
 	
