--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
@@ -94,5 +94,5 @@
                     </table>
             [% ELSE %]
                 </div>
-                <div class="alert alert-info">[% "No se han realizado reservas." | i18n %] &nbsp;[% cant %]</div>
+                <div class="alert alert-warning">[% "No se han realizado reservas." | i18n %] &nbsp;[% cant %]</div>
             [% END %] 
