--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/users-cardsResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/users-cardsResult.tmpl
@@ -79,9 +79,9 @@
     <script> var search2 = 'pdf'; </script>
     [% PERL %]
             print C4::AR::Filtros::action_button( 
-                                                text    =>  "[% 'Generar carnets' | i18n %]",
-                                                title    =>  "[% 'Generar carnets' | i18n %]",
+                                                title    =>  " [% 'Generar carnets' | i18n %]",
                                                 button   =>  "btn click btn-primary",
+                                                icon    => "icon-white icon-user"
                                                 action =>  "consultar(search2);",
                                             );
     [% END %]
