--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -92,11 +92,13 @@
 
                     <td >
                         [% PERL %]
-                            print C4::AR::Filtros::link_to( text =>     "[% HTML.escape(titulo) %]",
-                                                            url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
-                                                            params =>   ["id1=[% id1 %]"],
-                                                            title =>    "[% 'Mostrar Detalle del Registro' | i18n %]",
-                                                            class => "link_to_detail"
+                            print C4::AR::Filtros::link_to( text    =>  "[% HTML.escape(titulo) %]",
+                                                            url     =>  "[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                            params  =>  ["id1=[% id1 %]"],
+                                                            title   =>  "[% 'Mostrar Detalle del Registro' | i18n %]",
+                                                            class   =>  "link_to_detail",
+                                                            on_click=> "startOverlay();"
+
                                                         ) ;
                         [% END %]
                     </td>
