--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -23,7 +23,6 @@
     );
 
 [% END %]
-     <!--  {id => 'disponibilidad', text => "[% 'Disponibilidad de Ejemplares' | i18n %]"}, -->
          <div class="tab-pane fade in active" id="labels">
             [% INCLUDE 'partials/reportes/_reporte_gen_etiquetas.inc' %]
         </div>
@@ -44,6 +43,21 @@
 
       </div>
 </section>
+
+
+
+
+<div id="modal_report_long_call" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>[% 'Alerta de reporte' | i18n %]</h3>
+  </div>
+  <div class="modal-body">
+    <p>[% 'Este reporte puede llevar un tiempo considerable. Aunque este mensaje desaparezca, espere hasta que aparezca el archivo por favor...' | i18n %]</p>
+  </div>
+  <div class="modal-footer">
+  </div>
+</div>
 
 
 [% INCLUDE 'intranet-bottom.inc' %]
