--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -90,15 +90,15 @@ function buscarUsuariosPotenciales(){
 
 function updateInfo(responseText){
 	$("#result").html(responseText);
-	zebra("datos_tabla");
+
     var idArray = [];
     var classes = [];
     idArray[0] = 'persona';
     classes[0] = 'nomCompleto';
     classes[1] = 'documento';
     busqueda = jQuery.trim($('#persona').val());
-  //  if (busqueda.substr(0,6).toUpperCase() != 'FILTRO') //SI NO SE QUISO FILTRAR POR INICIAL, NO TENDRIA SENTIDO MARCARLO
-//      highlight(classes,idArray);
+
+    scrollTo('result');
 }
 
 function Borrar(){
