--- a/dev-plugins/bootstrapless/responsive-navbar.less
+++ b/dev-plugins/bootstrapless/responsive-navbar.less
@@ -1,11 +1,6 @@
-//
-// Responsive: Navbar
-// --------------------------------------------------
-
-
 // TABLETS AND BELOW
 // -----------------
-@media (max-width: @navbarCollapseWidth) {
+@media (max-width: 979px) {
 
   // UNFIX THE TOPBAR
   // ----------------
@@ -13,7 +8,7 @@
   body {
     padding-top: 0;
   }
-  // Unfix the navbars
+  // Unfix the navbar
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     position: static;
@@ -66,7 +61,7 @@
   // Nav and dropdown links in navbar
   .nav-collapse .nav > li > a,
   .nav-collapse .dropdown-menu a {
-    padding: 9px 15px;
+    padding: 6px 15px;
     font-weight: bold;
     color: @navbarLinkColor;
     .border-radius(3px);
@@ -83,10 +78,6 @@
   .nav-collapse .nav > li > a:hover,
   .nav-collapse .dropdown-menu a:hover {
     background-color: @navbarBackground;
-  }
-  .navbar-inverse .nav-collapse .nav > li > a:hover,
-  .navbar-inverse .nav-collapse .dropdown-menu a:hover {
-    background-color: @navbarInverseBackground;
   }
   // Buttons in the navbar
   .nav-collapse.in .btn-group {
@@ -147,20 +138,16 @@
     padding-left:  10px;
     padding-right: 10px;
   }
-
-
 }
 
 
 // DEFAULT DESKTOP
 // ---------------
 
+// Required to make the collapsing navbar work on regular desktops
 @media (min-width: 980px) {
-
-  // Required to make the collapsing navbar work on regular desktops
   .nav-collapse.collapse {
     height: auto !important;
     overflow: visible !important;
   }
-
 }
