--- a/dev-plugins/bootstrapless/component-animations.less
+++ b/dev-plugins/bootstrapless/component-animations.less
@@ -1,7 +1,5 @@
-//
-// Component animations
-// --------------------------------------------------
-
+// COMPONENT ANIMATIONS
+// --------------------
 
 .fade {
   opacity: 0;
@@ -15,7 +13,6 @@
   position: relative;
   height: 0;
   overflow: hidden;
-  overflow: visible \9;
   .transition(height .35s ease);
   &.in {
     height: auto;
