--- a/dev-plugins/bootstrapless/reset.less
+++ b/dev-plugins/bootstrapless/reset.less
@@ -1,8 +1,6 @@
-//
-// Modals
-// Adapted from http://github.com/necolas/normalize.css
-// --------------------------------------------------
-
+// Reset.less
+// Adapted from Normalize.css http://github.com/necolas/normalize.css
+// ------------------------------------------------------------------------
 
 // Display in IE6-9 and FF3
 // -------------------------
@@ -78,7 +76,6 @@ sub {
 
 img {
   max-width: 100%; // Make images inherently responsive
-  height: auto; // Make images inherently responsive
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
