--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -15,7 +15,8 @@
                                                 {id => 'labels', text => "[% 'Generaci&oacute;n de Etiquetas' | i18n %]"},
                                                 {id => 'unindexed', text => "[% 'Registros no indexados' | i18n %]"},
                                                 {id => 'colecciones', text => "[% 'Colecciones' | i18n %]"},
-                                                {id => 'disponibilidad', text => "[% 'Disponibilidad de Ejemplares' | i18n %]"}
+                                                {id => 'disponibilidad', text => "[% 'Disponibilidad de Ejemplares' | i18n %]"},
+                                                {id => 'estantes', text => "[% 'Estantes Virtuales' | i18n %]"}
                                               ],
                                  content_id=> 'reportes_catalogo',
                                  active_id => 'labels',
@@ -32,9 +33,16 @@
         <div class="tab-pane fade " id="colecciones">
             [% INCLUDE 'partials/reportes/_reporte_colecciones.inc' %]
         </div>
-          <div class="tab-pane fade " id="disponibilidad">
+        <div class="tab-pane fade " id="disponibilidad">
             [% INCLUDE 'partials/reportes/_reporte_disponibilidad.inc' %]
         </div>
+        <div class="tab-pane fade " id="estantes">
+            [% INCLUDE 'partials/reportes/_reporte_estantes_virtuales.inc' %]
+        </div>
+
+
+
+
 
         <div class="tab-pane fade " id="busquedas">
             [% INCLUDE 'partials/reportes/_reporte_busquedas.inc' %]
