--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -25,4 +25,16 @@
 
 <div id="reportResultCirc" style="display:none;"></div>
 
+<div id="modal_report_long_call" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>[% 'Alerta de reporte' | i18n %]</h3>
+    </div>
+    <div class="modal-body">
+        <p>[% 'Este reporte puede llevar un tiempo considerable. Aunque este mensaje desaparezca, espere hasta que aparezca el archivo por favor...' | i18n %]</p>
+    </div>
+    <div class="modal-footer">
+    </div>
+</div>
+
 [% INCLUDE 'intranet-bottom.inc' %]
