--- a/opac/htdocs/opac-tmpl/informacion/error_html.tmpl
+++ b/opac/htdocs/opac-tmpl/informacion/error_html.tmpl
@@ -11,7 +11,7 @@
 	<body>
 
 		<img src="/includes/css/404.png" alt="404" width="610" height="213">
-		<a href="https://[% SERVER_ADDRESS %]">
+		<a href="http://[% SERVER_ADDRESS %]">
 			<span class="text">[% 'Parece que te has perdido...' | i18n %]</span>
 			<span class="hover"></span>
 		</a>
