--- a/dev-plugins/bootstrapless/intranet/default/meran.less
+++ b/dev-plugins/bootstrapless/intranet/default/meran.less
@@ -38,8 +38,8 @@
 @import "../../buttons.less";
 @import "../../button-groups.less";
 @import "../../alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
-
-// Components: Nav
+//
+//// Components: Nav
 @import "../../navs.less";
 @import "../../navbar.less";
 @import "../../breadcrumbs.less";
@@ -50,7 +50,7 @@
 @import "../../modals.less";
 @import "../../tooltip.less";
 @import "../../popovers.less";
-
+//
 // Components: Misc
 @import "../../thumbnails.less";
 @import "../../labels-badges.less";
