--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -624,3 +624,5 @@ legend div.group_separator {background-color:#dff0d8;border-color:#d6e9c6;color:
     max-height: 180px;
     max-width:110px;
 }
+
+@grayDarker:    #555;
