--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -625,4 +625,6 @@ legend div.group_separator {background-color:#dff0d8;border-color:#d6e9c6;color:
     max-width:110px;
 }
 
-@grayDarker:    #555;
+@baseFontSize:          13px;
+@baseLineHeight:        18px;
+
