--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -73,7 +73,7 @@
     </div>
 </noscript>
 <header>
-	<div class="navbar navbar-fixed-top">
+	<div class="navbar navbar-inverse navbar-fixed-top">
 	    <div class="navbar-inner">
 	      <div class="container" style="width: auto;">
 	        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
