--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -627,4 +627,22 @@ legend div.group_separator {background-color:#dff0d8;border-color:#d6e9c6;color:
 
 @baseFontSize:          13px;
 @baseLineHeight:        18px;
+@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 15%);
+@btnBorder:                         #ccc;
+@iconSpritePath:          "/includes/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/includes/bootstrap/img/glyphicons-halflings-white.png";
+@navbarBackground:                @grayDarker;
+@navbarBackgroundHighlight:       @grayDark;
+@navbarBorder:                    darken(@navbarBackground, 12%);
 
+@navbarText:                      @grayLight;
+@navbarLinkColor:                 @grayLight;
+@navbarLinkColorHover:            @white;
+@navbarLinkColorActive:           @navbarLinkColorHover;
+@navbarLinkBackgroundHover:       transparent;
+@navbarLinkBackgroundActive:      @navbarBackground;
+
+@navbarSearchBackground:          lighten(@navbarBackground, 25%);
+@navbarSearchBackgroundFocus:     @white;
+@navbarSearchBorder:              darken(@navbarSearchBackground, 30%);
+@navbarSearchPlaceholderColor:    #ccc;
