--- a/dev-plugins/bootstrapless/opac/default/propio.less
+++ b/dev-plugins/bootstrapless/opac/default/propio.less
@@ -289,3 +289,18 @@ body {
     width: 200px;
     float: right;
 }
+
+@navbarText:                      @grayLight;
+@navbarLinkColor:                 @grayLight;
+@navbarLinkColorHover:            @white;
+@navbarLinkColorActive:           @navbarLinkColorHover;
+@navbarLinkBackgroundHover:       transparent;
+@navbarLinkBackgroundActive:      @navbarBackground;
+
+@navbarSearchBackground:          lighten(@navbarBackground, 25%);
+@navbarSearchBackgroundFocus:     @white;
+@navbarSearchBorder:              darken(@navbarSearchBackground, 30%);
+@navbarSearchPlaceholderColor:    #ccc;
+@iconSpritePath:          "/includes/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/includes/bootstrap/img/glyphicons-halflings-white.png";
+
